--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Whitewater Rafting Vacations</title>
+        <link rel="stylesheet" type="text/css" href="styles\style.css">
+    </head>
 </head>
 <body>
     <header>
@@ -11,23 +13,19 @@
             <img src="image/logo.png" alt="Dry Oar Logo" />
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.htm">Site Plan</a>
             <a href="contactus.html"></a>
             <p>
                 The primary purpose of the website is to sell river rafting trips. The
                 secondary purpose is informing visitors about the joys of rafting
-                adventures and the histories of the rivers we offer rafting trips on.
-                I want to create a company that uses the river rafting trip as a way
-                to connect to the history of an area rather then just another trip.
-      
+                adventures and the histories of the rivers we offer rafting trips.
               </p>
+              <a href="index.html">Home</a>
+              <a href="#">Page 2</a>
+              <a href="site-plan-rafting.htm">Site Plan</a>
         </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="image\hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
